fix bug with restaurant website url. Align text in Nearby Restaurants section of the Show page

--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -472,7 +472,7 @@ cf:before, .cf:after{
   padding: 0;
   overflow: hidden;
 
-  h2{
+  h2, p{
     margin-left: 25px;
   }
 }
